meja/tests/implicits.stderr
File "tests/implicits.meja", line 31, characters 10-14:
Error: Unbound constructor true.
